--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "@ckeditor/ckeditor5-upload": "^16.0.0",
     "@ckeditor/ckeditor5-vue": "^1.0.1",
     "@ckeditor/ckeditor5-word-count": "^16.0.0",
+    "axios": "^0.19.1",
     "core-js": "^2.6.5",
     "echarts": "^4.5.0",
     "element-ui": "^2.12.0",
     "html2canvas": "^1.0.0-rc.3",
     "i18n": "^0.8.3",
     "js-cookie": "^2.2.1",
+    "nprogress": "0.2.0",
     "qrcode.vue": "^1.6.3",
     "raw-loader": "^4.0.0",
     "register-service-worker": "^1.6.2",
@@ -51,7 +53,6 @@
     "vue-class-component": "^7.0.2",
     "vue-draggable": "^2.0.2",
     "vue-property-decorator": "^8.1.0",
-    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.3",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.0.1",
