--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "js-cookie": "^2.2.1",
     "nprogress": "0.2.0",
     "qrcode.vue": "^1.6.3",
+    "qs": "^6.9.1",
     "raw-loader": "^4.0.0",
     "register-service-worker": "^1.6.2",
     "underscore": "^1.9.1",
@@ -56,8 +57,7 @@
     "vue-router": "^3.0.3",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.0.1",
-    "vuex-class": "^0.3.2",
-    "wzw-kindeditor": "^1.0.4"
+    "vuex-class": "^0.3.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^2.2.4",
