--- a/package.json
+++ b/package.json
@@ -49,16 +49,17 @@
     "qs": "^6.9.1",
     "raw-loader": "^4.0.0",
     "register-service-worker": "^1.6.2",
+    "shelljs": "^0.8.3",
     "underscore": "^1.9.1",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-draggable": "^2.0.2",
+    "vue-lazyload": "^1.3.3",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.0.1",
-    "vuex-class": "^0.3.2",
-    "vue-lazyload": "^1.3.3"
+    "vuex-class": "^0.3.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^2.2.4",
@@ -74,6 +75,7 @@
     "babel-plugin-component": "^1.1.1",
     "cz-conventional-changelog": "^3.0.2",
     "eslint": "^5.16.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-vue": "^5.0.0",
     "ftp": "^0.3.10",
     "ftp-deploy": "^2.3.6",
