--- a/.eslintignore
+++ b/.eslintignore
@@ -1,1 +1,7 @@
-
+src/store/*
+src/common/tool/*
+src/common/**
+src/components/editor/*
+src/components/diy/*
+src/components/**
+src/assets/js/diy/*
