--- a/project.config.json
+++ b/project.config.json
@@ -1,13 +1,16 @@
 {
-  "description": "o2o project by WePY",
-  "setting": {
-    "urlCheck": true,
-    "es6": false,
-    "postcss": false,
-    "minified": false
-  },
-  "compileType": "miniprogram",
-  "appid": "wx99d9a6d6f73a9591",
-  "projectname": "o2o-client",
-  "miniprogramRoot": "./weapp"
+	"description": "o2o project by WePY",
+	"setting": {
+		"urlCheck": true,
+		"es6": false,
+		"postcss": false,
+		"minified": false
+	},
+	"compileType": "miniprogram",
+	"appid": "wx99d9a6d6f73a9591",
+	"projectname": "o2o-client",
+	"miniprogramRoot": "weapp/",
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
+	"condition": {}
 }
