--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "author": "junxiang wang <function@wzw.com>",
   "license": "MIT",
   "dependencies": {
-    "@wepy/x": "^2.0.2",
     "@wepy/core": "^2.0.0-alpha.9",
+    "@wepy/x": "^2.0.2",
     "miniprogram-slide-view": "0.0.3"
   },
   "devDependencies": {
@@ -27,6 +27,8 @@
     "@wepy/cli": "^2.0.0-alpha.20",
     "@wepy/compiler-babel": "^2.0.1",
     "@wepy/compiler-less": "^2.0.1",
+    "@wepy/plugin-define": "^2.0.3",
+    "@wepy/plugin-uglifyjs": "0.0.2",
     "babel-eslint": "^7.2.1",
     "cross-env": "^5.1.3",
     "eslint": "^3.18.0",
@@ -36,6 +38,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.0.1",
     "less": "^3.8.1",
+    "uglify-js": "^3.8.0",
     "wepy-eslint": "^1.5.3"
   }
 }
