优化脚手架： 1.请求封装（需要按模块封装，全部都放在src/api下面,例如api/ststem,api/product,api/store) 2.wx所有api提供promsie方式调用（推荐使用此方式调用) 3.常用提示(success，error)封装到common/fun中，并且都挂载到全局变量wx下，调用方式wx.fun.xxx。

--- a/project.config.json
+++ b/project.config.json
@@ -1,10 +1,23 @@
 {
 	"description": "o2o project by WePY",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": false,
 		"postcss": false,
-		"minified": false
+		"minified": false,
+		"newFeature": true,
+		"coverView": true,
+		"autoAudits": false,
+		"showShadowRootInWxmlPanel": true,
+		"scopeDataCheck": false,
+		"checkInvalidKey": true,
+		"checkSiteMap": true,
+		"uploadWithSourceMap": true,
+		"babelSetting": {
+			"ignore": [],
+			"disablePlugins": [],
+			"outputPath": ""
+		}
 	},
 	"compileType": "miniprogram",
 	"appid": "wx99d9a6d6f73a9591",
