脚手架优化和首页样式，感觉wepy效率也一般。

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "./node_modules/.bin/wepy build --watch",
     "build": "cross-env NODE_ENV=production ./node_modules/.bin/wepy build --no-cache",
-    "clean": "rm -rf weapp",
+    "clean": "rimraf weapp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "wepy": {
@@ -22,11 +22,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.1.0",
     "@wepy/babel-plugin-import-regenerator": "0.0.2",
     "@wepy/cli": "^2.0.0-alpha.20",
     "@wepy/compiler-babel": "^2.0.1",
     "@wepy/compiler-less": "^2.0.1",
+    "@wepy/compiler-sass": "^2.0.2",
+    "@wepy/compiler-typescript": "^2.0.2",
     "@wepy/plugin-define": "^2.0.3",
     "@wepy/plugin-uglifyjs": "0.0.2",
     "babel-eslint": "^7.2.1",
@@ -38,6 +41,8 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.0.1",
     "less": "^3.8.1",
+    "rimraf": "^3.0.2",
+    "typescript": "^3.8.3",
     "uglify-js": "^3.8.0",
     "wepy-eslint": "^1.5.3"
   }
