--- a/project.config.json
+++ b/project.config.json
@@ -52,6 +52,13 @@
 					"id": -1,
 					"name": "pages/index",
 					"pathName": "pages/store/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/store/index",
+					"pathName": "pages/store/index",
 					"scene": null
 				}
 			]
