--- a/project.config.json
+++ b/project.config.json
@@ -66,6 +66,13 @@
 					"id": -1,
 					"name": "pages/productDetail",
 					"pathName": "pages/productDetail",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/locales",
+					"pathName": "pages/locales",
 					"scene": null
 				}
 			]
