feat(分享赚): 新增分享详情页
1.缺少用户信息 2.海报生成没有数据

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "clean": "rimraf unpackage",
-    "lint": "eslint --ext .js,.vue",
+    "lint": "eslint --fix --ext .js --ext .vue",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
