feat(登录): 新增登录模块
1.暂时打通账号密码登录，方便下单支付收藏等流程 2.登录页面和登录接口可能还会调整，暂时不动

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "async-validator": "^3.2.4",
     "lodash": "^4.17.15",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "validate": "^5.1.0"
   },
   "devDependencies": {
     "@types/html5plus": "^1.0.0",
