--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "o2o-client",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "main.js",
   "scripts": {
     "clean": "rimraf unpackage",
     "lint": "eslint --fix --ext .js --ext .vue",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "version": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
   },
   "repository": {
     "type": "git",
