新增地址组件（调用的时候显示失败） 新增商品规格组件（未完成） 新增优惠券页面

--- a/manifest.json
+++ b/manifest.json
@@ -91,7 +91,7 @@
             "disableHostCheck" : true,
             "proxy" : {
                 "/api" : {
-                    "target" : "http://www.newo2osrc.com", //"http://www.gogo.com/api",
+                    "target" : "https://newo2o.bafangka.com", //"https://newo2o.bafangka.com http://www.newo2osrc.com",
                     "changeOrigin" : true,
                     "secure" : false,
                     "pathRewrite" : {
