feat(图片路径): 图片路径过滤

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "validate": "^5.1.0"
+    "validate": "^5.1.0",
+    "weixin-js-sdk": "^1.4.0-test"
   },
   "devDependencies": {
     "@types/html5plus": "^1.0.0",
