--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "validate": "^5.1.0",
+    "vuex": "^3.3.0",
     "weixin-js-sdk": "^1.4.0-test"
   },
   "devDependencies": {
