--- a/manifest.json
+++ b/manifest.json
@@ -70,13 +70,14 @@
     "mp-weixin" : {
         "appid" : "wxfe5d2621576cf895",
         "setting" : {
-            "urlCheck" : false
+            "urlCheck" : false,
+            "minified" : false
         },
         "usingComponents" : true,
-        "plugins": {
-            "live-player-plugin": {
-                "version": "1.0.15",
-                "provider": "wx2b03c6e691cd7370"
+        "plugins" : {
+            "live-player-plugin" : {
+                "version" : "1.0.15",
+                "provider" : "wx2b03c6e691cd7370"
             }
         },
         "permission" : {
