--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@git.wzwtec.com:function/o2o-client.git"
+    "url": "http://git.wzwtec.com/function/o2o-client"
   },
   "keywords": [],
   "author": "",
