feat(店铺首页): 新增店铺模板一
1.新增店铺模板1，改进多种交互情况。

--- a/manifest.json
+++ b/manifest.json
@@ -71,9 +71,9 @@
         "appid" : "wxfe5d2621576cf895",
         "setting" : {
             "urlCheck" : false,
-            "minified" : false
+            "minified" : true
         },
-        // "usingComponents" : true,
+        "usingComponents" : true,
         // "plugins" : {
         //    "live-player-plugin" : {
         //        "version" : "1.0.15",
