--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "sass-loader": "^9.0.3",
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
+    "validate": "^5.1.0",
     "vue": "^2.6.11",
     "vuex": "^3.2.0"
   },
